force-app/main/default/objects/DFD_City_Park__mdt/DFD_City_Park__mdt.object-meta.xml
<CustomObject>
    <label>DFD City Park</label>
    <pluralLabel>DFD City Parks</pluralLabel>
</CustomObject>