force-app/main/default/objects/DFD_City_Park__mdt/fields/DFD_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>DFD_Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <type>TextArea</type>
</CustomField>