force-app/main/default/objects/DFD_City_Park__mdt/fields/DFD_Park_Name__c.field-meta.xml
<CustomField>
    <fullName>DFD_Park_Name__c</fullName>
    <label>Park Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>