force-app/main/default/objects/DFD_City_Park__mdt/fields/DFD_Park_Type__c.field-meta.xml
<CustomField>
    <fullName>DFD_Park_Type__c</fullName>
    <label>Park Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City Park</fullName>
                <default>true</default>
                <label>City Park</label>
            </value>
            <value>
                <fullName>Independent Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>